# voxtract

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: 01_offline_transcription.md  02_voxtral_transcribe_2_announcement.md  03_voxtral_mini_transcribe_model.md
src/mistral_voice_mcp/: __init__.py  prompts.py  server.py  staging.py  transcriber.py  workdir.py
tests/: conftest.py  test_context_bias.py  test_e2e_flow.py  test_prompts.py  test_server_tools.py  test_staging.py  test_transcriber.py  test_workdir.py
tests/fixtures/: Example.mpeg
