[project]
name = "mistral-voice-mcp"
version = "0.1.0"
description = "MCP server for audio transcription using Mistral Voxtral Mini Transcribe 2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=2.1.3",
    "fastmcp>=3.1.0",
]

[project.scripts]
mistral-voice-mcp = "mistral_voice_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_voice_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call the real Mistral API (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
