[project]
name = "voxtract"
version = "0.1.2"
description = "Extract structured knowledge from voice recordings. MCP server powered by Mistral transcription + Claude post-processing."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["mcp", "transcription", "voice", "audio", "mistral", "voxtral", "markdown"]
dependencies = [
    "mistralai>=2.1.3",
    "fastmcp>=3.1.0",
]

[project.urls]
Repository = "https://github.com/hitesit/voxtract"

[project.scripts]
voxtract = "mistral_voice_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_voice_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call the real Mistral API (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
